Closed
Bug 317351
Opened 20 years ago
Closed 20 years ago
add env var to disable windows crash dialog on crash
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: vlad, Assigned: vlad)
Details
Attachments
(1 file)
|
1.31 KB,
patch
|
benjamin
:
first-review+
|
Details | Diff | Splinter Review |
Windows will pop up a "This application has performed an illegal blah blah and needs to close" dialog whenever an application segfaults or does something otherwise bad. This is really obnoxious on the tinderboxes, since it means that there will be a dozen or so (whatever the queue depth is) of these dialogs sitting around from bad checkins. For the Trender/Tgfx benchmark tinderboxes, it skews the numbers because it leaves a dialog up in the middle of the screen, clipping out some of the rendering.
| Assignee | ||
Comment 1•20 years ago
|
||
This patch adds an XRE_NO_WINDOWS_CRASH_DIALOG environment variable which sets the SetErrorMode bits to disable the crash dialog. It also fixes the way we call SetErrorMode, so that it doesn't clobber old flags that were set.
Attachment #203848 -
Flags: first-review?
| Assignee | ||
Updated•20 years ago
|
Attachment #203848 -
Flags: first-review? → first-review?(benjamin)
Updated•20 years ago
|
Attachment #203848 -
Flags: first-review?(benjamin) → first-review+
| Assignee | ||
Comment 2•20 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Component: XRE Startup → Startup and Profile System
QA Contact: xre.startup → startup
Updated•14 years ago
|
Assignee: nobody → vladimir
You need to log in
before you can comment on or make changes to this bug.
Description
•