b=317351, add env var to disable windows crash dialog on crash, r=bsmedberg